# alembic_client

./: Cargo.toml  Trunk.toml  index.html
src/: auth.rs  character.rs  main.rs  network.rs
src/game/: animation.rs  player.rs
src/ui/: connect_server.rs  create_character.rs  in_game.rs  load_character.rs  main_menu.rs  mod.rs
