[package]
name = "alembic_client"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
